fixed header's z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header {
     padding: 2em 1.5em;
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 1;
 }
 header div img {
     margin-bottom: 20px;
